@@ -13,6 +13,7 @@ Changelog
 - Change wording for "Return Excerpt" from "zurücksenden" to "ablegen". [njohner]
 - Add modification and creation date column to document listings. [njohner]
 - Fix handling of unidirectional by reference tasks in a sequential process. [phgross]
+- Disallow replacing the file on proposal documents with a non-.docx file. [Rotonen]
 - Disallow removing the file from proposal documents. [Rotonen]
 
 
